[gd_scene load_steps=6 format=3 uid="uid://cynwt6kdn6rk7"]

[ext_resource type="Script" path="res://Objects/Campaign/campaign_ui.gd" id="1_m73j6"]
[ext_resource type="Script" path="res://Objects/Campaign/ArmiesContainer.gd" id="2_hbtxh"]
[ext_resource type="Theme" uid="uid://dtrviaj4i4u60" path="res://Objects/Themes/ui_light.tres" id="2_r6qed"]
[ext_resource type="Script" path="res://Objects/Campaign/map_types_manager.gd" id="4_d6fhq"]
[ext_resource type="PackedScene" uid="uid://kplcxvwco21v" path="res://Objects/UI/button.tscn" id="4_pss78"]

[node name="CampaingUI" type="CanvasLayer"]
script = ExtResource("1_m73j6")

[node name="Container" type="Control" parent="."]
z_index = 1000
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_r6qed")

[node name="Panel" type="Panel" parent="Container"]
layout_mode = 0
offset_right = 472.0
offset_bottom = 48.0

[node name="GoldLabel" type="Label" parent="Container/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 21.0
offset_top = 14.0
offset_right = 67.0
offset_bottom = 40.0
text = "Gold: "

[node name="ManpowerLabel" type="Label" parent="Container/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 151.0
offset_top = 13.0
offset_right = 239.0
offset_bottom = 39.0
text = "Manpower:"

[node name="Province" type="Panel" parent="Container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -168.0
offset_right = 389.0
offset_bottom = -21.0
grow_vertical = 0

[node name="IncomeLabel" type="Label" parent="Container/Province"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 199.0
offset_top = 32.0
offset_right = 257.0
offset_bottom = 58.0
text = "Income"

[node name="PopulationLabel" type="Label" parent="Container/Province"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 27.0
offset_top = 31.0
offset_right = 112.0
offset_bottom = 57.0
text = "Population"

[node name="NameLabel" type="Label" parent="Container/Province"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 167.0
offset_bottom = 32.0
text = "Name"

[node name="PanelContainer" type="PanelContainer" parent="Container"]
layout_mode = 0
offset_left = 3.0
offset_top = 127.0
offset_right = 121.0
offset_bottom = 226.0

[node name="ArmiesContainer" type="VBoxContainer" parent="Container/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
script = ExtResource("2_hbtxh")

[node name="Title" type="Label" parent="Container/PanelContainer/ArmiesContainer"]
layout_mode = 2
text = "ARMIES
"

[node name="Button" type="Button" parent="Container/PanelContainer/ArmiesContainer"]
layout_mode = 2
focus_mode = 0
text = "TESTBUTTON "

[node name="VBoxContainer" type="VBoxContainer" parent="Container/PanelContainer/ArmiesContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="TotalLabel" type="Label" parent="Container/PanelContainer/ArmiesContainer"]
layout_mode = 2
text = "Total:"

[node name="MapTypesManager" type="PanelContainer" parent="Container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -315.0
offset_top = -93.0
offset_right = -23.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("4_d6fhq")

[node name="HBoxContainer" type="HBoxContainer" parent="Container/MapTypesManager"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BtnPoliticalMap" parent="Container/MapTypesManager/HBoxContainer" instance=ExtResource("4_pss78")]
layout_mode = 2
text = " Political "

[node name="BtnTerrainMap" parent="Container/MapTypesManager/HBoxContainer" instance=ExtResource("4_pss78")]
layout_mode = 2
text = " Terrain "

[node name="BtnReligionMap" parent="Container/MapTypesManager/HBoxContainer" instance=ExtResource("4_pss78")]
layout_mode = 2
text = " Religion "

[node name="BtnCultureMap" parent="Container/MapTypesManager/HBoxContainer" instance=ExtResource("4_pss78")]
layout_mode = 2
text = " Culture"

[connection signal="resized" from="Container/PanelContainer/ArmiesContainer" to="Container/PanelContainer/ArmiesContainer" method="_on_resized"]
[connection signal="pressed" from="Container/PanelContainer/ArmiesContainer/Button" to="." method="_on_button_pressed"]
[connection signal="button_down" from="Container/MapTypesManager/HBoxContainer/BtnPoliticalMap" to="Container/MapTypesManager" method="_on_btn_political_map_button_down"]
[connection signal="button_down" from="Container/MapTypesManager/HBoxContainer/BtnTerrainMap" to="Container/MapTypesManager" method="_on_btn_terrain_map_button_down"]
[connection signal="button_down" from="Container/MapTypesManager/HBoxContainer/BtnReligionMap" to="Container/MapTypesManager" method="_on_btn_religion_map_button_down"]
[connection signal="button_down" from="Container/MapTypesManager/HBoxContainer/BtnCultureMap" to="Container/MapTypesManager" method="_on_btn_culture_map_button_down"]
